--- a/java.html
+++ b/java.html
@@ -3,7 +3,7 @@
 <body>
 <h1> JavaScript</h1>
 <button type="button"
-onclick = "document.getElementByID('demo').innerHTML = Date()">
+onclick = "document.getElementById('demo').innerHTML = Date()">
 <p id = "demo"> A data aparecerá aqui </p>  
 </body>
 </html>
