--- a/java.html
+++ b/java.html
@@ -4,6 +4,8 @@
 <h1> JavaScript</h1>
 <button type="button"
 onclick = "document.getElementById('demo').innerHTML = Date()">
+Botão da data e hora</button>
+  
 <p id = "demo"> A data aparecerá aqui </p>  
 </body>
 </html>
