--- a/java.html
+++ b/java.html
@@ -7,5 +7,11 @@ onclick = "document.getElementById('demo').innerHTML = Date()">
 Botão da data e hora </button>
   
 <p id = "demo"> A data aparecerá aqui </p>  
+
+<p id = "demo2"></p>
+
+<script>
+document.getElementById("demo").innerHTML = "Hello Javascript!";
+</script>
 </body>
 </html>
