--- a/java.html
+++ b/java.html
@@ -13,5 +13,18 @@ Botão da data e hora </button>
 <script>
 document.getElementById("demo").innerHTML = "Hello Javascript!";
 </script>
+<h1> JavaScript </h1>
+  
+<p>Alterado conteúdo:</p>
+
+<button type = "button" onclick = "myFunction()"> Click me! </button>
+
+<p id = "demo2">Conteúdo</p>
+
+<script>
+function myFunction(){
+  document.getElementById("demo2"),innerHTML = "Alterado";
+}
+</script>
 </body>
 </html>
