--- a/java.html
+++ b/java.html
@@ -23,7 +23,7 @@ document.getElementById("demo").innerHTML = "Hello Javascript!";
 
 <script>
 function myFunction(){
-  document.getElementById("demo2"),innerHTML = "Alterado";
+  document.getElementById("demo2").innerHTML = "Alterado";
 }
 </script>
 </body>
