--- a/java.html
+++ b/java.html
@@ -2,27 +2,24 @@
 <html>
 <body>
 <h1> JavaScript</h1>
+
 <button type="button"
 onclick = "document.getElementById('demo').innerHTML = Date()">
 Botão da data e hora </button>
   
 <p id = "demo"> A data aparecerá aqui </p>  
 
-<p id = "demo2"></p>
 
-<script>
-document.getElementById("demo").innerHTML = "Hello Javascript!";
-</script>
-<h1> JavaScript </h1>
+<h1> JavaScript3 </h1>
   
-<p>Alterado conteúdo:</p>
+<p>Alterando conteúdo:</p>
 
 <button type = "button" onclick = "myFunction()"> Click me! </button>
 
 <p id = "demo2">Conteúdo</p>
 
 <script>
-function myFunction(){
+function myFunction() {
   document.getElementById("demo2").innerHTML = "Alterado";
 }
 </script>
