--- a/java.html
+++ b/java.html
@@ -23,5 +23,22 @@ function myFunction() {
   document.getElementById("demo2").innerHTML = "Alterado";
 }
 </script>
+
+<p id = "demo3"> Alterando estilo </p>
+
+<script>
+function myFunction(){
+  document.getElementById("demo").style.fontSize = "25px";
+  document.getElementById("demo").style.color = "red";
+  document.getElementById("demo").style.backgroundColor = "yellow";
+
+}
+</script>
+
+<button type = "button" onclick = "myFunction()">Click Me!</button>
+
+</body>
+</html>
+</script>
 </body>
 </html>
