--- a/java.html
+++ b/java.html
@@ -28,9 +28,9 @@ function myFunction() {
 
 <script>
 function myFunction(){
-  document.getElementById("demo").style.fontSize = "25px";
-  document.getElementById("demo").style.color = "red";
-  document.getElementById("demo").style.backgroundColor = "yellow";
+  document.getElementById("demo3").style.fontSize = "25px";
+  document.getElementById("demo3").style.color = "red";
+  document.getElementById("demo3").style.backgroundColor = "yellow";
 
 }
 </script>
